src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
	@import url('../../public/fonts/stylesheet.css');

	html,
	body {
		font-family: 'Clash Display';
	}

	#__next {
		@apply overflow-hidden 
		bg-black
		text-white;
	}

	@media (prefers-color-scheme: dark) {
		html {
			color-scheme: dark;
		}
		body {
			color: white;
			background: black;
		}
	}
}

.scroll_down {
	@apply invisible
	absolute
	right-0
	bottom-0 
	flex 
	flex-col 
	items-center 
	space-y-5
	sm:visible;
}

.scroll_down_line {
	@apply relative
	h-20 
	w-0.5 
	bg-white;
}

.ring_one {
	animation: rotate_right 5s linear infinite;
}
.ring_two {
	animation: rotate_left 5s linear infinite;
}

@keyframes rotate_right {
	0% {
		transform: rotate(0deg);
	}
	100% {
		transform: rotate(360deg);
	}
}
@keyframes rotate_left {
	0% {
		transform: rotate(-0deg);
	}
	100% {
		transform: rotate(-360deg);
	}
}

